[GreenCityUBS] JDK 21 Migration #6952 (#1270)
* build complete

* project started successfully

* warnings

* other warnings

* tests, formatter

* additional tests, code smells

* dockerfile

* dockerfile

* reliability, sonar

* reliability

* tests

* tests

* tests

* sonar cloud

* jwt and liquibase

* repo