@@ -38,7 +38,6 @@ import greencity.dto.order.UpdateAllOrderPageDto;
 import greencity.dto.order.UpdateOrderPageAdminDto;
 import greencity.dto.payment.ManualPaymentRequestDto;
 import greencity.dto.payment.PaymentResponseDto;
-import greencity.dto.position.PositionDto;
 import greencity.dto.service.GetServiceDto;
 import greencity.dto.service.GetTariffServiceDto;
 import greencity.dto.service.ServiceDto;
@@ -66,7 +65,6 @@ import greencity.enums.NotificationType;
 import greencity.enums.OrderStatus;
 import greencity.enums.PaymentStatus;
 import org.springframework.http.HttpStatus;
-
 import java.security.Principal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -76,8 +74,6 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-
 import static greencity.enums.ViolationLevel.MAJOR;
 
 public class ModelUtils {
@@ -252,14 +248,6 @@ public class ModelUtils {
             .build();
     }
 
-    public static PositionDto getPositionDto() {
-        return PositionDto.builder()
-            .id(1L)
-            .name("Водій")
-            .nameEn("Driver")
-            .build();
-    }
-
     public static ReceivingStationDto getReceivingStationDto() {
         return ReceivingStationDto.builder()
             .id(1L)
@@ -270,7 +258,7 @@ public class ModelUtils {
     public static ViolationDetailInfoDto getViolationDetailInfoDto() {
         LocalDateTime localdatetime = LocalDateTime.of(
             2021, Month.MARCH,
-            16, 13, 00, 00);
+            16, 13, 0, 0);
 
         return ViolationDetailInfoDto.builder()
             .orderId(1L)
@@ -282,17 +270,17 @@ public class ModelUtils {
     }
 
     public static Address address() {
-        List<Long> id = addressDto().stream().map(AddressDto::getId).collect(Collectors.toList());
-        List<String> city = addressDto().stream().map(AddressDto::getCity).collect(Collectors.toList());
-        List<String> street = addressDto().stream().map(AddressDto::getStreet).collect(Collectors.toList());
-        List<String> district = addressDto().stream().map(AddressDto::getDistrict).collect(Collectors.toList());
-        List<String> houseNumber = addressDto().stream().map(AddressDto::getHouseNumber).collect(Collectors.toList());
+        List<Long> id = addressDto().stream().map(AddressDto::getId).toList();
+        List<String> city = addressDto().stream().map(AddressDto::getCity).toList();
+        List<String> street = addressDto().stream().map(AddressDto::getStreet).toList();
+        List<String> district = addressDto().stream().map(AddressDto::getDistrict).toList();
+        List<String> houseNumber = addressDto().stream().map(AddressDto::getHouseNumber).toList();
         List<String> entranceNumber =
-            addressDto().stream().map(AddressDto::getEntranceNumber).collect(Collectors.toList());
-        List<String> houseCorpus = addressDto().stream().map(AddressDto::getHouseCorpus).collect(Collectors.toList());
-        List<Boolean> actual = addressDto().stream().map(AddressDto::getActual).collect(Collectors.toList());
+            addressDto().stream().map(AddressDto::getEntranceNumber).toList();
+        List<String> houseCorpus = addressDto().stream().map(AddressDto::getHouseCorpus).toList();
+        List<Boolean> actual = addressDto().stream().map(AddressDto::getActual).toList();
         return Address.builder()
-            .id(id.get(0))
+            .id(id.getFirst())
             .city(String.valueOf(city))
             .district(String.valueOf(district))
             .street(String.valueOf(street))
