@@ -10,7 +10,6 @@ import greencity.exceptions.BadRequestException;
 import greencity.exceptions.NotFoundException;
 import greencity.repository.AddressRepository;
 import greencity.repository.OrderRepository;
-import greencity.service.ubs.CoordinateServiceImpl;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,13 +19,11 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.stubbing.Answer;
 import org.modelmapper.ModelMapper;
-
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-
 import static greencity.ModelUtils.getOrderDto;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -93,7 +90,7 @@ class CoordinateServiceImplTest {
 
         for (Coordinates cord : ModelUtils.getCoordinatesSet()) {
             List<Order> currentOrders = allUndeliveredOrders.stream().filter(
-                o -> o.getUbsUser().getOrderAddress().getCoordinates().equals(cord)).collect(Collectors.toList());
+                o -> o.getUbsUser().getOrderAddress().getCoordinates().equals(cord)).toList();
             for (Order order : currentOrders) {
                 when(modelMapper.map(order, OrderDto.class)).thenReturn(
                     OrderDto.builder().latitude(order.getUbsUser().getOrderAddress().getCoordinates().getLatitude())
@@ -119,16 +116,12 @@ class CoordinateServiceImplTest {
 
     @Test
     void getClusterCoordsThrowExceptionToDistanceTest() {
-        Assertions.assertThrows(BadRequestException.class, () -> {
-            coordinateService.getClusteredCoords(-1, 20);
-        });
+        Assertions.assertThrows(BadRequestException.class, () -> coordinateService.getClusteredCoords(-1, 20));
     }
 
     @Test
     void getClusterCoordsThrowExceptionToLitresTest() {
-        Assertions.assertThrows(BadRequestException.class, () -> {
-            coordinateService.getClusteredCoords(2, -1);
-        });
+        Assertions.assertThrows(BadRequestException.class, () -> coordinateService.getClusteredCoords(2, -1));
     }
 
     @Test
@@ -167,23 +160,19 @@ class CoordinateServiceImplTest {
             }
         });
         GroupedOrderDto groupedOrderDto = coordinateService
-            .getClusteredCoordsAlongWithSpecified(ModelUtils.getCoordinatesDtoSet(), 3000, 15).get(0);
+            .getClusteredCoordsAlongWithSpecified(ModelUtils.getCoordinatesDtoSet(), 3000, 15).getFirst();
         assertEquals(3000, groupedOrderDto.getAmountOfLitres());
-        assertEquals(groupedOrderDto.getGroupOfOrders().get(0), getOrderDto());
+        assertEquals(groupedOrderDto.getGroupOfOrders().getFirst(), getOrderDto());
     }
 
     @Test
     void getClusteredCoordsAlongWithSpecifiedThrowExceptionToDistanceTest() {
-        Assertions.assertThrows(BadRequestException.class, () -> {
-            coordinateService.getClusteredCoords(-1, 20);
-        });
+        Assertions.assertThrows(BadRequestException.class, () -> coordinateService.getClusteredCoords(-1, 20));
     }
 
     @Test
     void getClusteredCoordsAlongWithSpecifiedThrowExceptionToLitresTest() {
-        Assertions.assertThrows(BadRequestException.class, () -> {
-            coordinateService.getClusteredCoords(2, -1);
-        });
+        Assertions.assertThrows(BadRequestException.class, () -> coordinateService.getClusteredCoords(2, -1));
     }
 
     @Test
